# obcd-pilot

./: .env.example  .gitignore  Makefile  README.md  obcd-pilot.spec  pyproject.toml  test.txt
.github/ISSUE_TEMPLATE/: spike.yml  user-story.yml
.github/workflows/: ci.yml
docs/: analysis-report.md  architecture.md  brs.md  definition-of-done.md  training.md
docs/adr/: adr-001-pyside6-ui.md  adr-002-pyinstaller.md  adr-003-docker-background.md  adr-004-rest-api.md  adr-005-qthread-pipeline.md  adr-006-yaml-config.md  adr-007-opencv-capture.md
docs/diagrams/: components.puml  containers.puml  context.puml  data-flow.puml
spikes/001-bundle-size/: test_bundle_size.py
spikes/002-frozen-startup/: freeze_entry.py  test_startup.py
spikes/003-opencv-capture/: test_capture.py
spikes/004-qthread-gil/: test_gil_release.py
src/obcd_pilot/: __init__.py  __main__.py  app_log.py  resources.py
src/obcd_pilot/alarm/: __init__.py  settings.py
src/obcd_pilot/capture/: __init__.py  _types.py  camera_worker.py  video_worker.py
src/obcd_pilot/config/: __init__.py
src/obcd_pilot/pipeline/: __init__.py  _loader.py  _obcd.py  _types.py  obcd_worker.py
src/obcd_pilot/ui/: __init__.py  alarms_view.py  icons.qrc  icons_rc.py  logs_view.py  main_window.py  monitor_view.py
src/obcd_pilot/ui/components/: __init__.py  capture_panel.py  playback_overlay.py  popup_alarm.py  preview.py  sound_alarm.py  status_panel.py  viewport.py
src/obcd_pilot/ui/styles/: app.qss  preview.qss  viewport.qss
src/obcd_pilot/ui/utils/: __init__.py  separators.py
tests/: conftest.py
tests/integration/: __init__.py  conftest.py  test_alarms_view.py  test_canvas.py  test_frame_canvas.py  test_logs_view.py  test_main_window.py  test_monitor_view.py  test_playback_overlay.py  test_popup_alarm.py  test_preview_pipeline.py  test_sound_alarm.py  test_status_panel.py
tests/unit/: __init__.py  test_alarm_settings.py  test_app_log.py  test_camera_worker.py  test_capture_types.py  test_obcd_loader.py  test_obcd_worker.py  test_playback_format.py  test_retrieve_cameras.py  test_separators.py  test_smoke.py  test_video_worker.py
tools/: __init__.py  dataset.py  devices.py  loop.py  metrics.py  train.py  train_colab.ipynb
weights/: README.md
