[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obcd-pilot"
version = "0.1.0"
description = "Desktop application piloting the Object-Based Change Detection pipeline."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
authors = [
    {name = "Muhammad Al Farizi"},
]
dependencies = [
    "numpy",
    "opencv-python",
    "cv2-enumerate-cameras",
    "PySide6",
    "PyYAML",
    "torch",
    "torchvision",
    "ultralytics",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "types-tqdm",
]
training = [
    "tqdm",
]

[project.urls]
Repository = "https://github.com/alfaarizi/obcd-pilot"
Issues = "https://github.com/alfaarizi/obcd-pilot/issues"

[project.scripts]
obcd-pilot = "obcd_pilot.__main__:main"

[tool.setuptools.package-data]
"obcd_pilot.ui" = ["styles/*.qss", "splash@2x.png", "sounds/*.wav"]

[tool.ruff]
target-version = "py311"
exclude = [
    "**/icons_rc.py",
    "**/pipeline/_obcd.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.11"
exclude = ["icons_rc\\.py$", "pipeline/_obcd\\.py$"]

# torchvision has no py.typed marker and no typeshed stubs.
[[tool.mypy.overrides]]
module = ["torchvision.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=obcd_pilot --cov-branch --cov-report=term-missing"

[tool.coverage.run]
source = ["obcd_pilot"]
omit = [
    "*/obcd_pilot/__main__.py",
    "*/obcd_pilot/ui/icons_rc.py",
    "*/obcd_pilot/pipeline/_obcd.py",
]

[tool.coverage.report]
fail_under = 90
show_missing = true